# 5dpo_ratf_driver

./: CMakeLists.txt  README.md  package.xml
bag/: log_tune_batt-11.73_2023-04-25-19-03-44.csv  log_tune_batt-11.75_2023-04-25-18-58-34.csv  log_tune_batt-11.79_2023-04-25-18-47-34.csv
doc/: motors-ctrl-calibration.xlsx
include/sdpo_ratf_driver/: Robot5dpoRatf.h  SdpoRatfDriverROS1.h  SdpoRatfDriverROS2.h  SdpoRatfTuneDriverROS1.h  SdpoRatfTuneDriverROS2.h  SerialChannelsConfig.h
include/sdpo_ratf_ros_driver/: Robot5dpoRatf.h  SdpoRatfROSDriver.h  SdpoRatfROSDriverTunning.h
launch/: sdpo_ratf_driver.launch  sdpo_ratf_driver.launch.xml  sdpo_ratf_driver_tune.launch  sdpo_ratf_driver_tune.launch.xml  sdpo_ratf_ros_driver_tune.launch
scripts/: test.py
src/: main.cpp
src/sdpo_ratf_driver/: Robot5dpoRatf.cpp  Robot5dpoRatfTune.cpp  SdpoRatfDriverROS1.cpp  SdpoRatfDriverROS2.cpp  SdpoRatfTuneDriverROS1.cpp  SdpoRatfTuneDriverROS2.cpp  SerialChannelsConfig.cpp
src/sdpo_ratf_ros_driver/: Robot5dpoRatf.cpp  Robot5dpoRatfTune.cpp  SdpoRatfROSDriver.cpp  SdpoRatfROSDriverTunning.cpp
